static/grid.css
.grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
  gap: 22px;
  margin: 0;
  padding: 0;
  > * {
    display: flex;
    margin: 0;
    padding: 0;
    > * {
      flex: 1;
    }
  }
}

.card {
  border-bottom: 2px solid var(--background-darker);
  padding: 6px 0 16px 0;
  position: relative;
  transition: border-color .3s ease-in-out;


  &:has(a:hover),
  &:has(a:focus) {
    border-color: var(--primary-accent);
    transition: border-color .1s ease-in-out;
  }

  a {
    color: var(--foreground);
    &:hover {
      text-decoration: none;
      color: var(--foreground-darker);
    }
  }

  h3 {
    padding-top: 0;
    margin-top: 0;
    margin-bottom: -4px;

    + * {
      margin-top: 0;
    }
  }

  dl {
    position: absolute;
    top: 1rem;
    right: 1rem;
    display: flex;
    gap: 3px;
    align-content: center;
    align-items: center;
    line-height: 1;
    color: var(--foreground-lighter);
    > * {
      display: flex;
      margin: 0;
    }
  }

  .labels {
    font-size: calc(1rem / 1.33);
    justify-content: flex-end;
    padding-right: 1rem;
    margin: 0;
  }
}

